--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -71,7 +71,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://libre-api.org
     runs-on: ubuntu-latest
     needs: build
     steps:
