Update Tailwind configuration, modify theme homepage, and add package-lock.json

--- a/docs/site/hugo.yaml
+++ b/docs/site/hugo.yaml
@@ -52,7 +52,7 @@ menu:
   main:
     - identifier: documentation
       name: Documentation
-      pageRef: /docs
+      pageRef: /docs/introduction/
       weight: 1
     - identifier: blog
       name: Blog
