--- a/docs/theme.toml
+++ b/docs/theme.toml
@@ -5,7 +5,7 @@ name = "Hextra"
 license = "MIT"
 licenselink = "https://github.com/imfing/hextra/blob/main/LICENSE"
 description = "Modern, responsive, batteries-included Hugo theme for creating beautiful static websites."
-homepage = "https://github.com/libre-api/website/"
+homepage = "https://libre-api.org"
 demosite = "https://imfing.github.io/hextra/"
 tags = ["Modern", "Elegant", "Blog", "Documentation", "Responsive", "Clean", "Light", "Dark", "Minimal"]
 features = ["Responsive", "Dark Mode", "Search", "Syntax Highlighting", "Multilingual", "Social", "Blog", "RSS", "Customization"]
